# perm-security

./: README.md  pyproject.toml
perm_security/: Token.py  __init__.py
perm_security/MemberAdapter/: MemberChannelAdapter.py  MemberGuildAdapter.py  __init__.py
perm_security/Permission/: __init__.py
perm_security/TokenStrategy/: BasicTokenStrategy.py  NonMemberTokenException.py  PermissionDeniedException.py  TokenStrategy.py  __init__.py
perm_security/TokenStrategy/TokenHandlerStrategy/: BasicTokenHandlerStrategy.py  TokenHandlerStrategy.py  __init__.py
perm_security/converters/: PermissionChannelConverter.py  __init__.py
tests/: test_imports.py
