[tool.poetry]
name = "repl_python3_Prime-Bot"
version = "0.1.0"
description = ""
authors = ["TheJoeSmo <joesmo.joesmo12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
discord = "^1.7.3"
perm-banana = "^0.1.1"
APScheduler = "^3.7.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.7b0"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
